--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -321,8 +321,8 @@ default – "White"
 /*---------------png,svg image----------------------*/
 .image {
     background: #FAFAFA;
-    vertical-align:middle;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .book.color-theme-1 .image {
