--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -322,7 +322,7 @@ default – "White"
 .image {
     background: #FAFAFA;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
 }
 
 .book.color-theme-1 .image {
