--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -357,6 +357,9 @@ p1 {
 }
 
 cap{
+    width: 6em;
     font-style: italic;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
 }
