--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -352,9 +352,12 @@ default – "White"
 }
 
 .caption{
+    font-weight: 850;
     margin-left: auto;
     margin-right: auto;
+    vertical-align:middle;
     width: 70%;
+    font-size: 12pt;
     text-align: justify;
     font-style: italic;
 }
