--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -359,7 +359,7 @@ default – "White"
     width: 80%;
     padding-bottom: 25px;
     font-size: 10pt;
-    text-align: justify;
+    text-align: center;
     font-style: italic;
 }
 
