--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -29,6 +29,8 @@ default – "White"
     border: .15em solid #0F5181;
     padding-left:10px;
     padding-right:10px;
+    padding-top:5px;
+    padding-bottom:5px;
 }
 
 .book.color-theme-1 .eoz {
