--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -379,11 +379,20 @@ p1 {
 
 EdEra_question{
     background: #FAFAFA;
-    display: block;
     border-left:0.3em solid #FAFAFA;
 }
 
 choice{
     margin-left: 5%;
+}
+message{
+    display: block;
+    border
+}
+
+explain{
+    background: #D8D8D8;
+    display: none;
+    border: 0.3em solid #979797;
 }
 
