--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -330,7 +330,7 @@ default – "White"
 
 /*---------------png,svg image----------------------*/
 .image {
-    background: #FAFAFA;
+    background: #FFFFFF;
     display: block;
     margin-left: auto;
     margin-right: auto;
