--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -392,6 +392,9 @@ p1 {
     margin:auto;
  }
  
+ table, td, td {
+    border: 2px solid #0F5180;
+}
 
 /*modal ssssss  */  
 @import url(//fonts.googleapis.com/css?family=Exo+2:700,400&subset=latin,cyrillic);
