--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -387,17 +387,13 @@ p1 {
 
 .centered-table {
     border-color:#0F5180;
+    border: 2px
     display: table !important;
     width: initial !important;
     margin:auto;
  }
  
-.boxed-eq {
-    border: 2px solid #0F5180;
-    display: table !important;
-    width: initial !important;
-    margin:auto;
-}
+
 
 /*modal ssssss  */  
 @import url(//fonts.googleapis.com/css?family=Exo+2:700,400&subset=latin,cyrillic);
