--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -387,7 +387,7 @@ p1 {
 
 .centered-table {
     border-color:#0F5180;
-    border: 2px
+    border: 2px solid;
     display: table !important;
     width: initial !important;
     margin:auto;
