--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -386,8 +386,7 @@ p1 {
 }
 
 .centered-table {
-    border-color:#0F5180;
-    border: 2px solid;
+    border: 2px solid #0F5180;
     display: table !important;
     width: initial !important;
     margin:auto;
