--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -729,4 +729,216 @@ body.remodal-is-active .remodal {
     border:none;
     background:none;
 }
+
+
+/* Quize style */
+.quiz {
+    border-left-style: none;
+    padding-left:10px;
+    padding-right:10px;
+}
+
+.quiz-question-text {
+    font-weight: 600;
+    color: #3C3C3C;
+    border-bottom: 0px solid #E7EAED;
+}
+
+.book.color-theme-1  .quiz-question-text{
+    color: #704214;
+    border-bottom:1px solid #704214;
+}
+
+.book.color-theme-2  .quiz-question-text{
+    color: #bdcadb;
+    border-bottom:1px solid #bdcadb;
+}
+
+.quiz-question {
+    border: none;
+}
+
+.quiz-answer {
+    margin-left: 20px;
+    color: #3c3c3c;
+    font-weight:400;
+    
+}
+
+.book.color-theme-1 input[type="radio" i], input[type="checkbox" i] {
+    background-color: #F3EACB;
+    border: #704214;
+}
+
+.book.color-theme-2 input[type="radio" i], input[type="checkbox" i] {
+    background-color: #bdcadb;
+    border: #D6DEE9;
+}
+
+.book.color-theme-1 .quiz-answer {
+    color: #704214;
+}
+
+.book.color-theme-2 .quiz-answer {
+    color: #bdcadb;
+}
+
+.button-check, .button-explain, .button-show-answer {
+  /* анимация кнопки*/
+    background-image: -webkit-linear-gradient(#eee,#d6cece);
+    background-image: linear-gradient(#eee,#d6cece);
+    -webkit-transition: background 1s ease-out;
+    -moz-transition: background 1s ease-out;
+    -o-transition: background 1s ease-out;
+    transition: background 1s ease-out;
+    border: 1px solid #cacaca;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 0 0 #fff;
+    color: #333;
+    display: inline-block;
+    font-size: inherit;
+    font-weight: bold;
+    background-color: #eee;
+    padding: 7px 18px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #f8f8f8;
+    background-clip: padding-box;
+    border: 1px solid #cfc6c6;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 0 0 #fff;
+    color: #333;
+    display: inline-block;
+    font-size: inherit;
+    font-weight: semi-bold;
+    background-color: #eee;
+    padding: 7px 18px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #f9f8f8;
+    background-clip: padding-box;
+}
+
+
+.book.color-theme-1 .quiz-question-check, .book.color-theme-1 .button-check, .book.color-theme-1 .button-explain, .button-show-answer {
+    background-image: -webkit-linear-gradient(#F3EACB,#F3EACB);
+    background-image: linear-gradient(#F3EACB,#F3EACB);
+    border: 1px solid #704214;
+    box-shadow: none;
+    color: #704214;
+    background-color: #F3EACB;
+    text-shadow: none;
+}
+
+.book.color-theme-2 .quiz-question-check, .book.color-theme-2 .button-check, .book.color-theme-2 .button-explain, .button-show-answer  {
+    background-image: -webkit-linear-gradient(#1C1F2B,#1C1F2B);
+    background-image: linear-gradient(#1C1F2B,#1C1F2B);
+    border: 1px solid #BDCADB;
+    box-shadow: none;
+    color: #BDCADB;
+    background-color: none;
+    text-shadow: none;
+}
+
+.book.color-theme-1 .quiz-question-check:hover  {
+        background-image: -webkit-linear-gradient(#704214,#704214);
+    background-image: linear-gradient(#704214,#704214 );
+    color: #F3EACB;
+    border-color: #704214;
+}
+
+.book.color-theme-2 .quiz-question-check:hover  {
+    background-image: -webkit-linear-gradient(#BDCADB,#BDCADB);
+    background-image: linear-gradient(#BDCADB,#BDCADB);
+    color: #1C1F2B;
+    border-color: #BDCADB;
+}
+
+.quiz-question-explanation {
+  font-size: 1.6rem;
+  margin: 20px 0;
+  border: 1px solid #ddd;
+  padding: 9px 15px 20px;
+  background: #fbfbfb;
+  box-shadow: inset 0 0 0 1px #eee;
+  border-radius: 3px;
+}
+
+.book.color-theme-1 .quiz-question-explanation {
+  border: 1px solid #704214;
+  background: #F3EACB;
+  box-shadow: inset 0 0 0 1px #704214;
+}
+
+.book.color-theme-2 .quiz-question-explanation {
+  border: 1px solid #2c3043;
+  background: #1c1f2b;
+  box-shadow: inset 0 0 0 1px #1c1f2b;
+}
+
+.explanation {
+  color: #aaa;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 18px;
+}
+
+div.buttons span { 
+    border-style: none;
+}
+
+
+.book.color-theme-1 .explanation {
+  color: #704214;
+}
+
+.book.color-theme-2 .explanation {
+  color: #bdcadb;
+}
+
+/* Картинка для видео*/
+.popup {
+  width:501px;
+  margin: 0 auto;
+  height: 282px;
+  position: relative;
+  border: 1px solid
+  border: 1px solid #ddd;
+  box-shadow: inset 0 0 0 1px #eee;
+  border-radius: 3px;
+}
+
+#youtube-logo {
+      background-image: url('https://cdn.rawgit.com/chudaol/ed-era-book-biology/master/youtube-dark.png');
+      height: 45px;
+      width: 64px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%)
+}
+
+.popup:hover #youtube-logo {
+      background-image: url('https://cdn.rawgit.com/chudaol/ed-era-book-biology/master/youtube-red.png');
+}
+
+@media only screen and (min-width:320px){
+.popup {
+      width: 320px;
+      height: 180px;
+      margin: 0 auto;
+      background-size: 320px;
+      clear: both;
+}
+}
+
+@media only screen and (min-width:510px){
+    .popup {
+        width: 500px;
+        height: 282px;
+        margin: 0 auto;
+        background-size: 500px;
+        clear: both;
+    }
+}
 }
