--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -463,3 +463,74 @@ p1 {
     }
 }
 }
+
+/* кнопка в попапе*/
+.but {
+    padding-left:10px;
+    padding-right:10px;
+    padding-top:7px;
+    padding-bottom:7px;
+    background: #faaf00; 
+    color: white;
+    font-weight: 700;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: solid 1px #faaf00;
+}
+.but:hover {
+    background: rgba(0,80,140,.9);
+    /*border: solid 1px #faaf00;*/
+    border: solid 1px rgba(0,80,140,.9);
+    text-decoration: none;
+}
+.but:active {
+    background: #faaf00;
+    border: solid 1px #faaf00;
+}
+
+.book.color-theme-1 .but {
+    padding-left:10px;
+    padding-right:10px;
+    padding-top:10px;
+    padding-bottom:10px;
+    background: #8c6742;
+    border: solid 1px #704214;
+    color:#F3EACB;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.book.color-theme-1 .but:hover {
+    background: #704214;
+    border: solid 1px #704214;
+    text-decoration: none;
+}
+.book.color-theme-1 .but:active {
+    background: #704214;
+    border: solid 1px #704214;
+}
+
+.book.color-theme-2 .but {
+    padding-left:10px;
+    padding-right:10px;
+    padding-top:10px;
+    padding-bottom:10px;
+    background: #565968;
+    border: solid 1px #2c3043;
+    color:#bdcadb;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.book.color-theme-2 .but:hover {
+    background: #2c3043;
+    border: solid 1px #2c3043;
+    text-decoration: none;
+}
+.book.color-theme-2 .but:active {
+    background: #2c3043;
+    border: solid 1px #2c3043;
+}
