--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -470,7 +470,7 @@ p1 {
     padding-right:10px;
     padding-top:7px;
     padding-bottom:7px;
-    background: #faaf00; 
+    background: #faaf00; /*#fac864;*/
     color: white;
     font-weight: 700;
     -webkit-border-radius: 4px;
