--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -433,8 +433,8 @@ p1 {
       height: 45px;
       width: 64px;
       position: absolute;
-      top: 50%;
-      left: 50%;
+      top: 141px;
+      left: 250px;
       margin-right: -50%;
       transform: translate(-50%, -50%)
 }
