--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -432,9 +432,9 @@ p1 {
       background-image: url('https://cdn.rawgit.com/chudaol/ed-era-book-biology/master/youtube-dark.png');
       height: 45px;
       width: 64px;
+      top: 50%;
+      left: 50%;
       position: absolute;
-      top: 141px;
-      left: 250px;
       margin-right: -50%;
       transform: translate(-50%, -50%)
 }
