--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -421,7 +421,8 @@ p1 {
   width:501px;
   margin: 0 auto;
   height: 282px;
-  position: relative;
+  /*position: relative;*/
+  display:inline-block;
   border: 1px solid
   border: 1px solid #ddd;
   box-shadow: inset 0 0 0 1px #eee;
@@ -433,6 +434,7 @@ p1 {
       height: 45px;
       width: 64px;
       top: 50%;
+      left: 50%;
       position: absolute;
       -ms-transform: translateY(-40%);
       -webkit-transform: translateY(-50%);
