--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -436,13 +436,13 @@ p1 {
       top: 50%;
       left: 50%;
       position: absolute;
-      -ms-transform: translateY(-40%);
+      /*-ms-transform: translateY(-40%);
       -webkit-transform: translateY(-50%);
       -moz-transform: translateY(-50%);
       -o-transform: translateY(-50%);
-      transform: translateY(-50%);
-      /*margin-right: -50%;
-      transform: translate(-50%, -50%)*/
+      transform: translateY(-50%);*/
+      margin-right: -50%;
+      transform: translate(-50%, -50%)
 }
 
 .popup:hover #youtube-logo {
