--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -541,3 +541,57 @@ p1 {
     background: #2c3043;
     border: solid 1px #2c3043;
 }
+
+ /* Картинка для видео*/
+.popup {
+  margin: 0 auto;
+  height: 282px;
+  display:inline-block;
+  border: 1px solid
+  border: 1px solid #ddd;
+  box-shadow: inset 0 0 0 1px #eee;
+  border-radius: 3px;
+}
+
+@media only screen and (min-width:320px){
+.popup {
+      width: 320px;
+      height: 180px;
+      margin: 0 auto;
+      background-size: 320px;
+      clear: both;
+}
+#youtube-logo {
+      background-image: url('https://cdn.rawgit.com/chudaol/ed-era-book-biology/master/youtube-dark.png');
+      height: 45px;
+      width: 64px;
+      position: absolute;
+      -ms-transform: translate(128px,68px); /* IE 9 */
+   	  -webkit-transform: translate(128px,68px); /* Safari */
+      transform: translate(128px,68px);
+}
+}
+
+@media only screen and (min-width:510px){
+    .popup {
+        width: 500px;
+        height: 282px;
+        margin: 0 auto;
+        background-size: 500px;
+        clear: both;
+    }
+    
+    #youtube-logo {
+      background-image: url('https://cdn.rawgit.com/chudaol/ed-era-book-biology/master/youtube-dark.png');
+      height: 45px;
+      width: 64px;
+      position: absolute;
+      -ms-transform: translate(218px,118px); /* IE 9 */
+   	  -webkit-transform: translate(218px,118px); /* Safari */
+      transform: translate(218px,118px);
+}
+}
+
+.popup:hover #youtube-logo {
+      background-image: url('https://cdn.rawgit.com/chudaol/ed-era-book-biology/master/youtube-red.png');
+}
