--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -477,7 +477,7 @@ p1 {
     padding-right:10px;
     padding-top:7px;
     padding-bottom:7px;
-    background: #faaf00; /*#fac864;*/
+    background: #faaf00;
     color: white;
     font-weight: 700;
     -webkit-border-radius: 4px;
