--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -551,7 +551,6 @@ p1 {
     height: 0;
     overflow: hidden;
 }
-
 .fluidMedia iframe {
     position: absolute;
     top: 0; 
@@ -604,14 +603,37 @@ p1 {
     margin-top: 5px;
 }
 
-.buttonBlock{
-    
+
+.but2{
     width: 20%;
     display: inline;
     position: relative;
     right: 5px;
     top: 5px;
+    padding-left:10px;
+    padding-right:10px;
+    padding-top:7px;
+    padding-bottom:7px;
+    background: #faaf00;
+    color: white;
+    font-weight: 700;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: solid 1px #faaf00;
 }
+
+.but2:hover {
+    background: rgba(0,80,140,.9);
+    /*border: solid 1px #faaf00;*/
+    border: solid 1px rgba(0,80,140,.9);
+    text-decoration: none;
+}
+.but2:active {
+    background: #faaf00;
+    border: solid 1px #faaf00;
+}
+
 
 eo{
     color: #faaf00;
