--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -588,7 +588,7 @@ p1 {
     background-position: right;
     background-repeat: no-repeat;
     background-size: 30px;
-    
+    font-size: 10px;
 }
 
 
