--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -605,6 +605,7 @@ p1 {
     position: relative;
     background: #faaf00;
     color: white;
+    bottom : 5px;
     font-weight: 700;
     font-size: 13px;
     -webkit-border-radius: 4px;
