--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -630,7 +630,7 @@ p1 {
     display: inline;
     position: relative;
     height : 30px;
-    padding-left : 5px;
+    margin-left : 5px;
     top : 5px;
 }
 
