--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -633,9 +633,9 @@ p1 {
 .closeBut{
     width: 5 %;
     display: inline;
-    position: relative;
+    float: right;
     height : 30px;
-    margin-left : 5px;
+    margin-right : 5px;
     top : 5px;
 }
 
