--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -589,7 +589,7 @@ p1 {
 
 .textBlock{
     display: inline;
-    width: 70%;
+    width: 60%;
     float: left;
     padding-left: 10px;
     color: black;
@@ -600,11 +600,12 @@ p1 {
 
 
 .but2{
-    width: 20%;
+    width: 25%;
     display: inline;
     position: relative;
     background: #faaf00;
     float: left;
+    height: 20px;
     color: white;
     margin-right : 2px;
     margin-top : 5px;
