--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -605,7 +605,7 @@ p1 {
     position: relative;
     background: #faaf00;
     margin-top:auto;
-    margin-right: 10px;
+    margin-left: 10px;
     height: 30px;
     color: white;
     font-weight: 700;
