--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -604,7 +604,7 @@ p1 {
     display: inline;
     position: relative;
     background: #faaf00;
-    margin-top:auto;
+    margin-top:5px;
     margin-left: 30px;
     height: 30px;
     color: white;
