--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -639,6 +639,8 @@ p1 {
 
 .closeBut:hover {
     background: rgba(0,80,140,.9);
+    border-radius: 4px;
+    border: solid 1px rgba(0,80,140,.9);
 }
 
 eo{
