--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -647,3 +647,14 @@ eo{
     color: #faaf00;
     font-weight: bold;
 }
+
+@media only screen and (min-width:320px) and (max-width: 509px){
+        .boxCourse{
+    top: 5px;
+    position: relative;
+    visibility: visible;
+    overflow: hidden;
+        width: 100%;
+}
+    
+}
