--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -649,15 +649,25 @@ eo{
 }
 
 @media only screen and (min-width:320px) and (max-width: 509px){
-.boxCourse{
+    .boxCourse{
     top: 5px;
     position: relative;
     visibility: visible;
     overflow: hidden;
     width: 100%;
+    height: 60px;
 }
-   
-  .but2{
-    margin-left: 5%px;
-  }
+    .but2{
+    margin-left: 5%;
+    }
+    
+    .closeBut{
+    margin-top: 15px;
+    }
+    
+    .textBlock{
+    height: 80%;
+    margin-top: auto;
+    }
+    
 }
