--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -379,12 +379,12 @@ default – "White"
 
 .book.color-theme-1 .p1{
     font-weight: bold;
-    color: #2C3043;
+    color: RGB(182,194,210);
 }
 
 .book.color-theme-2 .p1{
     font-weight: bold;
-    color: #F3EACB;
+    color: RGB(112,66,20);
 }
 
 .centered {
