--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -448,23 +448,38 @@ default – "White"
 
 
 .btn-knopka {
-  background-image: linear-gradient(0deg, #FFBD0D 0%, #FFFFFE 100%);
-  border: 1px solid #FFBD0D;
+  /*background-image: linear-gradient(0deg, #FFBD0D 0%, #FFFFFE 100%);*/
+  moz-linear-gradient(top,#fff 0,#ffe6a0 2%,#ffba00 100%);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#fff),color-stop(2%,#ffe6a0),color-stop(100%,#ffba00));
+  background: -webkit-linear-gradient(top,#fff 0,#ffe6a0 2%,#ffba00 100%);
+  background: -o-linear-gradient(top,#fff 0,#ffe6a0 2%,#ffba00 100%);
+  background: #ffba00 -ms-linear-gradient(top,#fff 0,#ffe6a0 2%,#ffba00 100%);
+  background: #ffba00 linear-gradient(top,#fff 0,#ffe6a0 2%,#ffba00 100%);
+  transition: background 0.1s linear;
+  border: 1px solid #ffba00;
   border-radius: 4px;
   padding: 4px 3px;
 }
 
+.btn-knopka:hover {
+  moz-linear-gradient(top,#FFE48D 0,#FFDE6E 2%,#ffba00 100%);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#FFE48D),color-stop(2%,#FFDE6E),color-stop(100%,#ffba00));
+  background: -webkit-linear-gradient(top,#FFE48D 0,#FFDE6E 2%,#ffba00 100%);
+  background: -o-linear-gradient(top,#FFE48D 0,#FFDE6E 2%,#ffba00 100%);
+  background: -ms-linear-gradient(top,#FFE48D 0,#FFDE6E 2%,#ffba00 100%);
+  background: linear-gradient(top,#FFE48D 0,#FFDE6E 2%,#ffba00 100%);
+}
+
+
 .btn-knopka a.knopka {
-  text-decoration: none;
-  font-weight: 300;
+  font-weight: 500;
   color: #000000 !important;
-  transition: color 0.1s linear;
   font-family: 'Open Sans', sans-serif !important;
 }
 
-.btn-knopka a.knopka :hover {
+.btn-knopka a.knopka:hover {
   color: #0F5181;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 
@@ -498,7 +513,7 @@ default – "White"
   .btn-knopka {
     display: block;
     position:relative;
-    width: 136px;
+    width: 140px;
     height: 30px;
     text-align: center;
     top: 6px;
@@ -537,76 +552,3 @@ default – "White"
     font-size: 15px;
   }
 }
-
-
-/* кнопка в попапе*/
-.but {
-    padding-left:10px;
-    padding-right:10px;
-    padding-top:7px;
-    padding-bottom:7px;
-    background: #faaf00;
-    color: white;
-    font-weight: 700;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    border: solid 1px #faaf00;
-}
-.but:hover {
-    background: rgba(0,80,140,.9);
-    /*border: solid 1px #faaf00;*/
-    border: solid 1px rgba(0,80,140,.9);
-    text-decoration: none;
-}
-.but:active {
-    background: #faaf00;
-    border: solid 1px #faaf00;
-}
-
-.book.color-theme-1 .but {
-    padding-left:10px;
-    padding-right:10px;
-    padding-top:10px;
-    padding-bottom:10px;
-    background: #8c6742;
-    border: solid 1px #704214;
-    color:#F3EACB;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-}
-
-.book.color-theme-1 .but:hover {
-    background: #704214;
-    border: solid 1px #704214;
-    text-decoration: none;
-}
-.book.color-theme-1 .but:active {
-    background: #704214;
-    border: solid 1px #704214;
-}
-
-.book.color-theme-2 .but {
-    padding-left:10px;
-    padding-right:10px;
-    padding-top:10px;
-    padding-bottom:10px;
-    background: #565968;
-    border: solid 1px #2c3043;
-    color:#bdcadb;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-}
-
-.book.color-theme-2 .but:hover {
-    background: #2c3043;
-    border: solid 1px #2c3043;
-    text-decoration: none;
-}
-.book.color-theme-2 .but:active {
-    background: #2c3043;
-    border: solid 1px #2c3043;
-}
-
