--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -430,7 +430,7 @@ default – "White"
 .description {
   display: block;
   background-color: rgba(0, 0, 0, 0.7);
-  margin: -4px auto 10px auto;
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.50);
 }
 
 .text {
@@ -503,6 +503,7 @@ default – "White"
     position:relative
     width: 100%;
     height: 42px;
+    margin: -5px auto 10px auto;
   }
   .text {
     visibility: hidden;
@@ -536,6 +537,7 @@ default – "White"
   .description {
     width: 510px;
     height: 62px;
+    margin: -4px auto 10px auto;
   }
 
   .text {
