--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -617,3 +617,8 @@ default – "White"
     color: rgb(250,175,0);
     animation: fadeIn .5s, slideDown .5s;
 }
+
+/* No vertical lines in MathJax */
+span {
+    border-left-width: 0 !important;
+}
