--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -619,6 +619,6 @@ default – "White"
 }
 
 /* No vertical lines in MathJax */
-span {
+nobr > .math > span {
     border-left-width: 0 !important;
 }
