added maxwidth to the edera logo

--- a/_layouts/website/header.html
+++ b/_layouts/website/header.html
@@ -9,7 +9,8 @@
     max-width: 5em;
   }
   .book-header a.logo img {
-    height: 100%
+    height: 100%;
+    max-width: 100%;
   }
 </style>
 <div class="book-header" role="navigation">
